# NeroSAMP

./: .gitignore  Alyn_SAMPMOBILE_log.txt  README.md  build.gradle  key.jks  sampoffset.txt  settings.gradle
app/src/main/cpp/source/Alyn_SAMPMOBILE/: CMakeLists.txt  backtrace.cpp  backtrace.h  java.cpp  java.h  main.cpp  main.h  samp.cpp  samp.h  settings.cpp  settings.h
app/src/main/cpp/source/Alyn_SAMPMOBILE/game/: audiostream.cpp  audiostream.h  common.h  cracked_classes.h  hooks_patches.h  sa_hooks.cpp  sa_patches.cpp  samp_hooks.cpp  samp_patches.cpp  scripting.cpp  scripting.h  utils.cpp  utils.h
app/src/main/cpp/source/Alyn_SAMPMOBILE/net/: localplayer.h  netgame.h  objectpool.h  player.h  playerpool.h  remoteplayer.h  rpcs.cpp  vehiclepool.h
app/src/main/cpp/source/Alyn_SAMPMOBILE/ui/: imguirenderer.cpp  imguirenderer.h  imguiwrapper.cpp  imguiwrapper.h  ui.cpp  ui.h  uisettings.cpp  uisettings.h  widget.cpp  widget.h
app/src/main/cpp/source/Alyn_SAMPMOBILE/voice/: Channel.cpp  Channel.h  ControlPacket.cpp  ControlPacket.h  Effect.cpp  Effect.h  GlobalStream.cpp  GlobalStream.h  Header.h  LocalStream.cpp  LocalStream.h  MicroIcon.cpp  MicroIcon.h  Network.cpp  Network.h  Parameter.cpp  Parameter.h  Playback.cpp  Playback.h  Plugin.cpp  Plugin.h  PluginConfig.cpp  PluginConfig.h  Record.cpp  Record.h  SetController.cpp  SetController.h  SlideController.cpp  SlideController.h  SpeakerList.cpp  SpeakerList.h  Stream.cpp  Stream.h  StreamAtObject.cpp  StreamAtObject.h  StreamAtPlayer.cpp  StreamAtPlayer.h  StreamAtPoint.cpp  StreamAtPoint.h  (+6 more)
(+11133 files in other folders)
